<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

<EditText
    android:id="@+id/etSearch"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/text_search"
    android:inputType="text"
    android:imeOptions="actionSearch"
    android:singleLine="true"
    android:autofillHints="name"
    android:padding="12dp"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:drawableStart="@drawable/ic_search"
    android:drawablePadding="8dp"
    android:layout_marginHorizontal="12dp"
    android:layout_marginTop="12dp"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvSearchHistory"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:visibility="gone"
        android:elevation="8dp"
        android:background="@android:color/white"
        app:layout_constraintTop_toBottomOf="@id/etSearch"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <TextView
        android:id="@+id/tvNotFind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_product_not_find"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_marginTop="12dp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/etSearch"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvProducts"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="12dp"
        app:layout_constraintTop_toBottomOf="@id/etSearch"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/rvPages"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvPages"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
         android:layout_marginHorizontal="32dp"
        android:layout_marginVertical="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/retry"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <ImageView
            android:id="@+id/imgError"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/ic_error"
            android:contentDescription="@string/error_show_product"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:id="@+id/tvError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/txt_error_show_product"
            app:layout_constraintTop_toBottomOf="@id/imgError"
            app:layout_constraintStart_toStartOf="@id/imgError"
            app:layout_constraintEnd_toEndOf="@id/imgError"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnRetry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/txt_retry"
            app:layout_constraintStart_toStartOf="@id/imgError"
            app:layout_constraintTop_toBottomOf="@id/tvError"
            app:layout_constraintEnd_toEndOf="@id/imgError"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>